# rust_tasks

./: Cargo.toml  README.md  local_first.md  sample_config.toml  sample_tasks_server_config.toml  server_dockerfile
rust_tasks/: Cargo.toml
rust_tasks/src/: config.rs  lib.rs  main.rs  tasks.rs
rust_tasks/src/storage/: api_storage.rs  mod.rs  sqlite_storage.rs  storage.rs
rust_tasks/src/tasks/: add_utils.rs  display_utils.rs  edit_utils.rs  summary.rs
tasks_server/: Cargo.toml
tasks_server/src/: config.rs  main.rs
