[package]
name = "rust_tasks"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rust_tasks"
src = "src/main.rs"

# [[bin]]
# name = "tasks_server"
# path = "src/server.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.4.7", features = ["derive"] }
color-eyre = "0.6.2"
iso8601-duration = { version = "0.2.0", features = ["chrono"] }
rusqlite = "0.29.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.116"
serde_yaml = "0.9.27"
tempfile = "3.8.1"
termcolor = "1.3.0"
thiserror = "1.0.58"
toml = "0.8.12"
ulid = "1.1.0"
ureq = { version = "*", features = ["json", "charset"] }
xdg = "2.5.2"
